[package]
name = "did-web-rpk-tls"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core"] }
hyper = { version = "0.14", features = ["full"] }
rand_core = { version = "0.6", features = ["getrandom"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-rustls = "0.26"
url = "2.5"
rustls = "0.23"
